crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__shared_map.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#36 : Data = (con data (Map [(I 42, I 42), (I 42, I 9)])) in
let alias#37 : Data = data#36 in
constr 0 data#36 (case@Data alias#37 of
  DataMap payload#38 -> payload#38) (case@Data alias#37 of
  DataMap payload#39 -> payload#39)
--- unoptimized UPLC
(program 1.1.0
  [(lam data_36
    [(lam alias_37
      (constr 0
        data_36
        [(lam generated_40
          (force
            [[[[[[(force (builtin chooseData)) generated_40] (delay (error))]
              (delay [(lam payload_38 payload_38) [(builtin unMapData) generated_40]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_37]
        [(lam generated_41
          (force
            [[[[[[(force (builtin chooseData)) generated_41] (delay (error))]
              (delay [(lam payload_39 payload_39) [(builtin unMapData) generated_41]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_37]))
      data_36])
    (con data (Map [(I 42, I 42), (I 42, I 9)]))])
--- optimized Core
let data_payload#7 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 42)), ((I 42), (I 9))]) in
constr 0 (con data (Map [(I 42, I 42), (I 42, I 9)])) data_payload#7 data_payload#7
--- optimized UPLC
(program 1.1.0
  [(lam data_payload_1
    (constr 0
      (con data (Map [(I 42, I 42), (I 42, I 9)]))
      data_payload_1
      data_payload_1))
    (con (list (pair data data)) [((I 42), (I 42)), ((I 42), (I 9))])])
--- isolated pass
--- isolated ANF input
let data#36 : Data = (con data (Map [(I 42, I 42), (I 42, I 9)])) in
let alias#37 : Data = data#36 in
let anf#40 : list (pair Data Data) = case@Data alias#37 of
  DataMap payload#38 -> payload#38 in
let anf#41 : list (pair Data Data) = case@Data alias#37 of
  DataMap payload#39 -> payload#39 in
constr 0 data#36 anf#40 anf#41
--- isolated folded Core
let data_payload#42 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 42)), ((I 42), (I 9))]) in
let data#36 : Data = (con data (Map [(I 42, I 42), (I 42, I 9)])) in
let alias#37 : Data = data#36 in
let anf#40 : list (pair Data Data) = let payload#38 : list (pair Data Data) = data_payload#42 in
payload#38 in
let anf#41 : list (pair Data Data) = let payload#39 : list (pair Data Data) = data_payload#42 in
payload#39 in
constr 0 data#36 anf#40 anf#41
--- isolated cleaned Core
let data_payload#42 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 42)), ((I 42), (I 9))]) in
constr 0 (con data (Map [(I 42, I 42), (I 42, I 9)])) data_payload#42 data_payload#42
--- isolated UPLC before
(program 1.1.0
  [(lam data_36
    [(lam alias_37
      [(lam anf_40
        [(lam anf_41 (constr 0 data_36 anf_40 anf_41))
          [(lam generated_42
            (force
              [[[[[[(force (builtin chooseData)) generated_42] (delay (error))]
                (delay [(lam payload_39 payload_39) [(builtin unMapData) generated_42]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            alias_37]])
        [(lam generated_43
          (force
            [[[[[[(force (builtin chooseData)) generated_43] (delay (error))]
              (delay [(lam payload_38 payload_38) [(builtin unMapData) generated_43]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_37]])
      data_36])
    (con data (Map [(I 42, I 42), (I 42, I 9)]))])
--- isolated UPLC after
(program 1.1.0
  [(lam data_payload_42
    (constr 0
      (con data (Map [(I 42, I 42), (I 42, I 9)]))
      data_payload_42
      data_payload_42))
    (con (list (pair data data)) [((I 42), (I 42)), ((I 42), (I 9))])])
--- result
(constr 0
  (con data (Map [(I 42, I 42), (I 42, I 9)]))
  (con (list (pair data data)) [((I 42), (I 42)), ((I 42), (I 9))])
  (con (list (pair data data)) [((I 42), (I 42)), ((I 42), (I 9))]))
--- logs
[]
