crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__traced_subject.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (trace "subject" in (con data (I 42))) of
  DataI number#1 -> number#1
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (error))]
        (delay [(lam number_1 number_1) [(builtin unIData) generated_2]])]
        (delay (error))]))
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con data (I 42)))])])
--- optimized Core
let anf#3 : Data = trace "subject" in (con data (I 42)) in
case@Data anf#3 of
  DataI number#2 -> number#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam builtin_7
      [(lam anf_1
        [(lam generated_5
          (force
            [[[[[[builtin_6 generated_5] (delay (error))] (delay (error))] (delay (error))]
              (delay [(lam number_4 number_4) [(builtin unIData) generated_5]])]
              (delay (error))]))
          anf_1])
        (force [[builtin_7 (con string "subject")] (delay (con data (I 42)))])])
      (force (builtin trace))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#2 : Data = trace "subject" in (con data (I 42)) in
case@Data anf#2 of
  DataI number#1 -> number#1
--- isolated folded Core
let anf#2 : Data = trace "subject" in (con data (I 42)) in
case@Data anf#2 of
  DataI number#1 -> number#1
--- isolated cleaned Core
let anf#2 : Data = trace "subject" in (con data (I 42)) in
case@Data anf#2 of
  DataI number#1 -> number#1
--- isolated UPLC before
(program 1.1.0
  [(lam anf_2
    [(lam generated_3
      (force
        [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
          (delay (error))]
          (delay [(lam number_1 number_1) [(builtin unIData) generated_3]])]
          (delay (error))]))
      anf_2])
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con data (I 42)))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_2
    [(lam generated_3
      (force
        [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
          (delay (error))]
          (delay [(lam number_1 number_1) [(builtin unIData) generated_3]])]
          (delay (error))]))
      anf_2])
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con data (I 42)))])])
--- result
(con integer 42)
--- logs
["subject"]
