crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__unknown_parameter.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
(\data#1 : Data -> case@Data data#1 of
  DataI payload#2 -> payload#2) (con data (I 42))
--- unoptimized UPLC
(program 1.1.0
  [(lam data_1
    [(lam generated_3
      (force
        [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
          (delay (error))]
          (delay [(lam payload_2 payload_2) [(builtin unIData) generated_3]])]
          (delay (error))]))
      data_1])
    (con data (I 42))])
--- optimized Core
case@Data (con data (I 42)) of
  DataI payload#4 -> payload#4
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam generated_2
      (force
        [[[[[[builtin_3 generated_2] (delay (error))] (delay (error))] (delay (error))]
          (delay [(lam payload_1 payload_1) [(builtin unIData) generated_2]])]
          (delay (error))]))
      (con data (I 42))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
(\data#1 : Data -> case@Data data#1 of
  DataI payload#2 -> payload#2) (con data (I 42))
--- isolated folded Core
(\data#1 : Data -> case@Data data#1 of
  DataI payload#2 -> payload#2) (con data (I 42))
--- isolated cleaned Core
42
--- isolated UPLC before
(program 1.1.0
  [(lam data_1
    [(lam generated_3
      (force
        [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
          (delay (error))]
          (delay [(lam payload_2 payload_2) [(builtin unIData) generated_3]])]
          (delay (error))]))
      data_1])
    (con data (I 42))])
--- isolated UPLC after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
